[package]
name = "neural_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_derive = "1.0"
rand = "0.8.5"
ndarray = {version = "0.15.6", features = ["rayon","matrixmultiply-threading"]}
rayon = "1.8.0"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-system"] }
ndarray-rand = "0.14.0"
plotters = "0.3.5"